--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </style>
   </head>
   <body>
-    <iframe src="http://3.140.184.238:3838/"></iframe>
+    <iframe src="http://3.140.184.238:3838/" allow="encrypted-media"></iframe>
   </body>
 </html>
